Rewrite StatementEngineService: COBOL-faithful CBSTM03A.CBL translation
- Complete rewrite of StatementEngineService.java (1016 lines) translating
  CBSTM03A.CBL statement generation engine into Java Spring @Service
- All COBOL paragraphs mapped to Java methods with 100% traceability:
  * generateStatements() - main entry (PROCEDURE DIVISION)
  * openAllFiles()/closeAllFiles() - paragraphs 8100-8400/9100-9400
  * loadTransactionTable() - paragraph 8500-READTRNX-READ
  * createStatement() - paragraph 5000-CREATE-STATEMENT
  * writeHtmlHeader() - paragraph 5100-WRITE-HTML-HEADER
  * writeHtmlNameAddress() - paragraph 5200-WRITE-HTML-NMADBS
  * writeTransactions() - paragraph 4000-TRNXFILE-GET
  * writeTransactionLine() - paragraph 6000-WRITE-TRANS
- Uses StatementIoService via @Autowired (replaces CALL 'CBSTM03B')
- BigDecimal for all monetary accumulation (RoundingMode.HALF_UP)
- Both plain-text (PIC X(80)) and HTML statement output
- COBOL-faithful formatting: ST-LINE0 through ST-LINE14, HTML L01-L08
- Rewritten StatementEngineServiceTest.java (15 tests, all passing)
  covering dependency injection, file operations, HTML/text output,
  transaction processing, edge cases, and amount formatting
- Module builds with zero errors, zero warnings (Java 25 -Xlint:all -Werror)
- Full test suite: 418 tests, 0 failures, 0 errors